CloudFormation/streamflex-infra.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'StreamFlex - Couche Reseau (VPC, Subnets, IGW, NAT) et DB (Sync Continue DynamoDB Streams & RDS)'

Parameters:
  ProjectName:
    Type: String
    Default: streamflex
    Description: Nom du projet utilisé pour tagger les ressources

# Condition pour s'assurer de déployer les bonnes ressources dans les bonnes régions
Conditions:
  IsActiveRegion: !Equals [ !Ref "AWS::Region", "us-east-1" ]
  IsPassiveRegion: !Equals [ !Ref "AWS::Region", "us-west-2" ]

Resources:
  # =========================================================
  # COUCHE BASE DE DONNÉES NOSQL (DYNAMODB - CATALOGUE)
  # =========================================================
  
  # 0.1 Base de données DynamoDB (Créée dans les deux régions)
  CatalogDatabase:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: !Sub "${ProjectName}-catalog-db"
      AttributeDefinitions:
        - AttributeName: id
          AttributeType: S
      KeySchema:
        - AttributeName: id
          KeyType: HASH
      BillingMode: PAY_PER_REQUEST
      # Activation de DynamoDB Streams pour capturer chaque modification
      StreamSpecification:
        StreamViewType: NEW_AND_OLD_IMAGES

  # 0.2 Fonction Lambda de Synchronisation Continue
  SyncCatalogLambda:
    Type: AWS::Lambda::Function
    Condition: IsActiveRegion
    Properties:
      FunctionName: !Sub "${ProjectName}-dynamodb-sync-stream"
      Handler: index.lambda_handler
      Role: !Sub "arn:aws:iam::${AWS::AccountId}:role/LabRole" 
      Runtime: python3.9
      Timeout: 30
      Environment:
        Variables:
          TABLE_NAME: !Sub "${ProjectName}-catalog-db"
          DEST_REGION: "us-west-2"
      Code:
        ZipFile: |
          import boto3
          import os

          def lambda_handler(event, context):
              dest_region = os.environ['DEST_REGION']
              table_name = os.environ['TABLE_NAME']
              dynamo_dest = boto3.client('dynamodb', region_name=dest_region)
              for record in event['Records']:
                  event_name = record['eventName']
                  try:
                      if event_name in ['INSERT', 'MODIFY']:
                          new_image = record['dynamodb']['NewImage']
                          dynamo_dest.put_item(TableName=table_name, Item=new_image)
                      elif event_name == 'REMOVE':
                          keys = record['dynamodb']['Keys']
                          dynamo_dest.delete_item(TableName=table_name, Key=keys)
                  except Exception as e:
                      print(f"Erreur lors de la réplication : {str(e)}")
              return {"status": 200, "message": "Synchronisation continue terminée"}

  # 0.3 Le lien (Trigger) entre le Stream DynamoDB et la Lambda
  DynamoDBStreamToLambda:
    Type: AWS::Lambda::EventSourceMapping
    Condition: IsActiveRegion
    Properties:
      EventSourceArn: !GetAtt CatalogDatabase.StreamArn
      FunctionName: !Ref SyncCatalogLambda
      StartingPosition: LATEST


#========================================================
#COUCHE BASE DE DONNÉES RELATIONNELLE (RDS - MICROSERVICE USER)
#========================================================

  # 0.4 Groupe de sous-réseaux pour RDS
  RDSSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: "Sous-reseaux prives pour la base RDS"
      SubnetIds:
        - !Ref PrivateSubnetAZ1
        - !Ref PrivateSubnetAZ2

  # 0.5 Security Group pour RDS (Notre version blindée et stricte)
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Acces MySQL strict pour les conteneurs ECS"
      VpcId: !Ref MainVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 10.0.2.0/24 
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 10.0.3.0/24
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-rds-sg

# 0.6 Instance RDS Active
  UserDatabase:
    Type: AWS::RDS::DBInstance
    Condition: IsActiveRegion
    DeletionPolicy: Delete
    Properties:
      DBInstanceIdentifier: !Sub "${ProjectName}-user-db-primary"
      AllocatedStorage: 20
      DBInstanceClass: db.t3.micro
      Engine: mysql
      EngineVersion: "8.0"
      MasterUsername: adminuser
      MasterUserPassword: StreamflexPassword123
      DBSubnetGroupName: !Ref RDSSubnetGroup
      VpcSecurityGroupIds:
        - !Ref RDSSecurityGroup
      PubliclyAccessible: false
      StorageEncrypted: false


  # =========================================================
  # COUCHE RESEAU (VPC)
  # =========================================================

  MainVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-vpc

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-igw

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MainVPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnetAZ1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MainVPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: !Select [0, !GetAZs ''] 
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-public-az1

  PublicSubnetAZ2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MainVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [1, !GetAZs ''] 
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-public-az2

  PrivateSubnetAZ1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MainVPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-private-az1

  PrivateSubnetAZ2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MainVPC
      CidrBlock: 10.0.3.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-private-az2

  NatElasticIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatElasticIP1.AllocationId
      SubnetId: !Ref PublicSubnetAZ1
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-nat-az1

  NatElasticIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatElasticIP2.AllocationId
      SubnetId: !Ref PublicSubnetAZ2
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-nat-az2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MainVPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-public-rt

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetAZ1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetAZ2
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MainVPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-private-rt-az1

  PrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetAZ1
      RouteTableId: !Ref PrivateRouteTable1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MainVPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-private-rt-az2

  PrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetAZ2
      RouteTableId: !Ref PrivateRouteTable2

Outputs:
  VpcId:
    Value: !Ref MainVPC
    Export:
      Name: !Sub "${ProjectName}-${AWS::StackName}-VpcId"
  PublicSubnet1:
    Value: !Ref PublicSubnetAZ1
    Export:
      Name: !Sub "${ProjectName}-${AWS::StackName}-PublicSubnet1"
  PublicSubnet2:
    Value: !Ref PublicSubnetAZ2
    Export:
      Name: !Sub "${ProjectName}-${AWS::StackName}-PublicSubnet2"
  PrivateSubnet1:
    Value: !Ref PrivateSubnetAZ1
    Export:
      Name: !Sub "${ProjectName}-${AWS::StackName}-PrivateSubnet1"
  PrivateSubnet2:
    Value: !Ref PrivateSubnetAZ2
    Export:
      Name: !Sub "${ProjectName}-${AWS::StackName}-PrivateSubnet2"
